--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.16.3",
+    "express-session": "^1.17.0",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.6.9",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "reactstrap": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
