--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,11 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.6.9",
     "node-sass": "^4.12.0",
-    "react": "^16.9.0",
+    "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
-    "react-dom": "^16.9.0",
+    "react-coverflow": "^0.2.20",
+    "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.0",
     "react-scripts": "0.9.5",
     "reactstrap": "^5.0.0"
