--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "nicks-app",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://lsimianer.github.io/nickspage",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-session": "^1.17.0",
+    "gh-pages": "^2.1.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.9",
     "node-sass": "^4.12.0",
@@ -26,7 +28,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": " -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "engines": {
     "node": ">=8.0.0",
