--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": false,
   "homepage": "https://lsimianer.github.io/nickspage/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
@@ -17,6 +20,7 @@
     "react-calendar": "^2.19.2",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.10.2",
+    "react-icons": "^3.8.0",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "0.9.5",
