--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.6.9",
     "node-sass": "^4.12.0",
+    "radium": "^0.26.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-calendar": "^2.19.2",
