--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express": "^4.16.3",
     "express-session": "^1.17.0",
     "gh-pages": "^2.1.1",
+    "google-auth-library": "^5.7.0",
+    "googleapis": "^39.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.9",
     "node-sass": "^4.13.0",
